crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_wrap_inner_inline_component_prop.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useStore, useSignal } from "@qwik.dev/core";
export default component$((props: { id: number }) => {
  const renders = useStore(
    {
      count: 0,
    },
    { reactive: false },
  );
  renders.count++;
  const rerenders = renders.count + 0;
  const Id = (props: any) => <div>Id: {props.id}</div>;
  return (
    <>
      <Id id={props.id} />
      {rerenders}
    </>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);
=== test.tsx_test_component_XXXXXXXXXXXX.js === (ENTRY)
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
export const test_component_XXXXXXXXXXXX = (props) => {
  const renders = useStore(
    {
      count: 0,
    },
    {
      reactive: false,
    },
  );
  renders.count++;
  const rerenders = renders.count + 0;
  const Id = (props) =>
    /* @__PURE__ */ _jsxSorted("div", null, null, ["Id: ", _wrapProp(props, "id")], 1, "u6_0");
  return /* @__PURE__ */ _jsxSorted(
    _Fragment,
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted(
        Id,
        null,
        {
          id: _wrapProp(props, "id"),
        },
        null,
        3,
        "u6_1",
      ),
      rerenders,
    ],
    1,
    "u6_2",
  );
};
/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ===

[]
