crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_wrap_object_with_fn_signal.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { component$ } from "@qwik.dev/core";
export default component$((props) => {
  // not destructure it so it is a var prop
  const item = props.something.count;
  return (
    <>
      <div data-no-wrap={item ? item * 2 : null} data-wrap={props.myobj.id + "test"}></div>
    </>
  );
});

============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export default /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);
============================= test.tsx_test_component_XXXXXXXXXXXX.js (ENTRY POINT)==
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const _hf0 = (p0) => p0.myobj.id + "test";
const _hf0_str = 'p0.myobj.id+"test"';
export const test_component_XXXXXXXXXXXX = (props) => {
  // not destructure it so it is a var prop
  const item = props.something.count;
  return /*#__PURE__*/ _jsxSorted(
    _Fragment,
    null,
    null,
    /*#__PURE__*/ _jsxSorted(
      "div",
      {
        "data-no-wrap": item ? item * 2 : null,
        "data-wrap": _fnSignal(_hf0, [props], _hf0_str),
      },
      null,
      null,
      3,
      null,
    ),
    1,
    "u6_0",
  );
};
/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    72,
    291
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==

[]
