crates/swc-optimizer/core/src/snapshots/qwik_core__test__support_windows_paths.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { component$ } from "@qwik.dev/core";
export const Greeter = component$(() => <div />);

============================= components/apps/apps.ts ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./apps.tsx_Greeter_component_XXXXXXXXXXXX");
export const Greeter = /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "Greeter_component_XXXXXXXXXXXX"),
);
============================= components/apps/apps.tsx_Greeter_component_XXXXXXXXXXXX.ts (ENTRY POINT)==
import { _jsxSorted } from "@qwik.dev/core";
export const Greeter_component_XXXXXXXXXXXX = () =>
  /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, "KD_0");
/*
{
  "origin": "components/apps/apps.tsx",
  "name": "Greeter_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "apps.tsx_Greeter_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "apps.tsx_Greeter_component_XXXXXXXXXXXX",
  "path": "components/apps",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
== DIAGNOSTICS ==

[]
