crates/swc-optimizer/core/src/snapshots/qwik_core__test__ternary_prop.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { component$, $, useSignal } from "@qwik.dev/core";
export const Cmp = component$(() => {
  const toggleSig = useSignal(false);

  const handleClick$ = $(() => {
    toggleSig.value = !toggleSig.value;
  });

  return (
    <button onClick$={handleClick$} data-open={toggleSig.value ? true : undefined}>
      Removing data-open re-renders
    </button>
  );
});

============================= test.ts ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Cmp_component_XXXXXXXXXXXX");
export const Cmp = /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "Cmp_component_XXXXXXXXXXXX"),
);

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;AACA,OAAO,MAAM,oBAAM,4EAYhB"}',
);
============================= test.tsx_Cmp_component_XXXXXXXXXXXX.ts (ENTRY POINT)==
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const _hf0 = (p0) => (p0.value ? true : undefined);
const _hf0_str = "p0.value?true:undefined";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Cmp_component_handleClick_XXXXXXXXXXXX");
export const Cmp_component_XXXXXXXXXXXX = () => {
  const toggleSig = useSignal(false);
  const handleClick$ = /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "Cmp_component_handleClick_XXXXXXXXXXXX", [
    toggleSig,
  ]);
  return /*#__PURE__*/ _jsxSorted(
    "button",
    null,
    {
      "q-e:click": handleClick$,
      "data-open": _fnSignal(_hf0, [toggleSig], _hf0_str),
    },
    "Removing data-open re-renders",
    3,
    "u6_0",
  );
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;;mBAS+C,GAAU,KAAK,GAAG,OAAO;;;yCAR1C;IAC5B,MAAM,YAAY,UAAU;IAE5B,MAAM;;;IAIN,qBACE,WAAC;QAAO,aAAU;QAAc,WAAS;;;OAAsC;AAInF"}',
);
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Cmp_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    90,
    368
  ]
}
*/
============================= test.tsx_Cmp_component_handleClick_XXXXXXXXXXXX.ts (ENTRY POINT)==
import { _captures } from "@qwik.dev/core";
export const Cmp_component_handleClick_XXXXXXXXXXXX = () => {
  const toggleSig = _captures[0];
  toggleSig.value = !toggleSig.value;
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";qDAIyB;;IACrB,UAAU,KAAK,GAAG,CAAC,UAAU,KAAK"}',
);
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_handleClick_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Cmp_component_handleClick",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Cmp_component_handleClick_XXXXXXXXXXXX",
  "path": "",
  "extension": "ts",
  "parent": "Cmp_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    162,
    213
  ],
  "captureNames": [
    "toggleSig"
  ]
}
*/
== DIAGNOSTICS ==

[]
